--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.username=hr
-spring.datasource.password=hr
-spring.datasource.url=jdbc:mariadb://144.24.77.163:3306/High
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.url=jdbc:mariadb://
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=krsproutbro@gmail.com
-spring.mail.password=Rktm1515%%
+spring.mail.username=
+spring.mail.password=
 spring.mail.port=587
 
 spring.mail.properties.mail.smtp.auth=true
